app/assets/stylesheets/static_pages.scss
/* Site Wide */

html, body {
  height: 100%;
}

body {
  background-color: #232f63 !important;
  // font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-family: 'Open Sans', 'Myriad Pro', 'Source Sans Pro', sans-serif !important;
  color:white !important;
}

.container{
  width:80% !important;
}

.container p {
  font-size: 16px;
}

.col-xs-12 {
  color: white;
  // padding-left: 0px !important;
  // padding-right: 0px !important;
}

.page_wrap{
  min-height: 72%;
  /* equal to footer height */
  // margin-bottom: -174px;
}

.page-wrap:after {
  content: "";
  display: block;
}

.footer, .page-wrap:after {
  height: 174px;
}

.footer {
  background-color: #f48d4e;
}

.social_bar, .copyright{
  text-align: center;
  margin:0 auto;
  color:white;
}

.social_bar{
  margin-top:50px;
}

.copyright{
  margin-top:20px;
}

.social_bar a{
  text-decoration: none;
  color:inherit;
}

.social_bar i{
  margin:0px 10px;
}

.copyright{

}

.header {
  height: 90px;
  background-color: #f48d4e;
  // margin-right: -100px;
  z-index:10;
}

.header img {
  position: relative;
  top: 10px;
  width: 149px;
  z-index: 10;
}

.no_text_decoration{
  text-decoration: none;
  color:inherit;
}

.no_text_decoration:hover{
  text-decoration: none;
  color:inherit;
}

.twenty_px_margin{
  margin:20px 0px;
}

/* Font Sizes */

.font_size_twenty_one{
  font-size:21px !important;
}

.font_size_sixteen{
  font-size:16px;
}

.font_size_eighteen{
  font-size:18px !important;
  line-height: 30px;
}

.font_size_thirty_six{
  font-size:36px;
  line-height: 36px;
}

.bold{
  font-weight: bold;
}

.italic{
  font-style: italic;
}

/* Justification */

.justify{
  text-align: justify;
}

.margin_center{
  text-align: center;
  margin: 0 auto;
}



/* Home Page */

.highlight {
  font-size: 1.5em;
  padding: 180px 0px 0px 0px;
  font-color: white !important;
  background: url(../images/dami_hero1.png) no-repeat left center scroll;
  // background-size: 1235px 640px;
  background-size: 100% 100%;
  height: 620px;
  width: 100%;
  z-index:1;
}

.overlay{
  background-color: rgba(48, 62, 122, .8);
  height: 620px;
  width:100%;
  position: absolute;
  top:90px;
  z-index:5;
}

.highlight p {
  max-width: 800px;
  text-align: center;
  margin: 0 auto;
}

.highlight_text{
  position:absolute;
  top: 292px;
  left:24%;
  max-width:800px;
  margin:0 auto;
  text-align: center;
  z-index: 10;
  font-size:1.5em;
  width: 52%;
}


.content_block {
  margin: 0 auto;
  width:82%;
  max-width: 1160px;
  padding: 60px 0px;
}

.sub_content_block{
  width:77%;
  max-width:894px;
  margin: 35px auto;
}

.sub_content_block p{
  font-size:18px;
  line-height: 30px;
}

.sub_title {
  line-height: 30px;
  font-size:36px;
}

.border{
  border-bottom: 3px white solid;
  width:50px;
  margin:20px 0px;
}

.who, .how{
  background-color: #232f63;
}

.why, .goal{
  background-color: #315e92;
}

.bio_pic, .why_pics {
  // width: 1000px;
  // float: left;
  height:300px;
  margin:35px 0px;
}

.bio_pic_img, .why_pic_block{
  // display:inline-block;
  // width:25%;
  text-align: center;
  height:250px;
  vertical-align: top;
}

.bio_pic_img img{
  margin: 0 auto;
}

.blue_circle, .light_blue_circle{
  height:150px;
  width:150px;
  border-radius:50%;
  margin: 10px auto;
}

.blue_circle{
  background-color: #232f63;
}

.light_blue_circle{
  background-color: #315e92;
}

.blue_square{
  width:260px;
  height:220px;
  background-color: #315e92;
  margin: 10px auto;
}

.light_blue_square{
  width:260px;
  height:220px;
  background-color: #232f63;
  margin: 10px auto;
}

.title {
  font-weight: bold;
  font-size:1.2em;
  padding: 20px 0px 0px 0px;
  color: rgb(54, 93, 209);
}




/* Vertical Navbar */

nav{
  margin-top:-170px;
  z-index: 10;
  position: absolute;
  top: 180px;
}

nav:after{
  clear:both;
}
nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  width:260px;
}


nav li a {
  color:white;
  display:table;
  background-color: #f48d4e;
  margin-bottom:3px;
  height:40px;
  text-indent:55px;
  padding-right: 20px;
  line-height: 40px;
  font-size:18px;
  min-width:180px;
}

nav li a:hover{
  background-color: #6496cc;
  text-decoration: none;
  color:white;
  text-indent:75px;
  min-width:195px;
}

.active a{
  background-color:white;
  color:#f48d4e;
  display:inline-block;
  position:relative;
}

.active a:hover{
  background-color:white;
  color:#f48d4e;
  display:inline-block;
  position:relative;
  text-indent:55px;
  padding-right: 20px;

}

.active a:after {
  content: '';
  display: block;
  position: absolute;
  left: 100%;
  top: 50%;
  margin-top: -20px;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 20px solid transparent;
  border-left: 20px solid white;
}


/* Horizontal Navbar */

#navigation{
  position: absolute;
  top:-500px;
  background-color: #f48d4e;
  color:white;
  padding:0;
  margin:0;
}

#nav_partial{
  position:fixed;
  top:0;
  z-index: 10;
  width: 100%;
  height: 40px;
}


.content_margin_top{
  margin-top: 250px;
}

#navigation.affix {
  position: fixed;
  top: 0;
  // width: 100%;
  z-index:10;
}

.nav{
  background-color: #f48d4e;
  width:100%;
  text-align: center;
  margin: 0 auto;
  height:130px;
}

.nav-bottom{
  height:auto !important;
}

.nav a,
.nav_bottom a{
  color:white;
}

.dami_logo{
  z-index:50;
  position: relative;
  top: -74px;
  width: 137px;
}

.dami_logo_home{
  z-index:50;
  position: relative;
  top: 11px;
  width: 137px;
}

.nav-tabs{
  border:none !important;
  margin:0;
  padding:0;
}

.nav-tabs>li {
  float: none !important;
  display:inline-block  !important;
  margin:0px !important;
}

.nav-tabs > li > a{
  border: 0px solid transparent !important;
  margin:0px !important;
}

.nav-tabs > li > a:hover{
  background-color: #6496cc !important;
  border-radius: 0;
  color:#fff;
}

.active_page_top{
  border-bottom:5px white solid !important;
}

.active_page_bottom{
  border-top:2px white solid !important;
}


/* About */

#about{
  background-color: #315e92;
}

.about_bio{
  text-align: center;
  margin:30px 0px;
}

.about_bio_name{
  font-size:36px;
  width:240px;
  margin:0 auto;
}

.about_border{
  border-bottom: 3px white solid;
  width:50px;
  margin:20px auto;
}

.about_bio_descrip{
  font-size:18px;
  max-width:432px;
  margin:0 auto;
  // white-space:nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  // height:265px;
  line-height: 30px;
}

.line_clamp {
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.about_staff{
  background-color: #232f63;
  padding: 150px 0px;
  min-height:620px;
}

.about_staff_title{
  font-size:36px;
  margin:10px auto;
  text-align:center;
}

.about_staff_descrip{
  line-height:18px;
  margin-bottom:40px;
}



/* Principles */
#principles{
  background-color: #315e92;
  padding-bottom:100px;
}

#principles p{
  background-color: #232f63;
  max-width:894px;
  padding:40px 50px;
  margin:25px auto;
}

/* Studies */
#studies{
  background-color: #315e92;
  padding-bottom:100px;
}

#studies a{
  color:white;
  text-decoration: none;
}

.studies_link{
  padding:20px 40px;
  background-color: #232f63;
  margin:20px 0px;
  display:inline-block;
}

/* Resources */
#resources{
  background-color: #315e92;
  padding-bottom:100px;
}

.resource_block{
  margin: 40px 0px 10px 0px;
  max-width: 432px;
  height:268px;
  background-color: #f48d4e;
  padding: 25px;
  text-align: center;
  font-size: 21px;
}

.address_block {
  margin: 40px 0px 10px 0px;
  max-width: 432px;
  height:268px;
  background-color: #232f63;
  padding: 25px;
  font-size: 21px;
}

.address_border{
  border-bottom: 2px white solid;
  width:35px;
  margin:10px 0px;
}

.resource_border{
  border-bottom: 2px white solid;
  width:35px;
  margin:10px auto;
}


/* Background */

#background .container{
  max-width:894px;
}

.dark_blue{
  background-color: #232f63;
}

.light_blue{
  background-color: #315e92;
}

.lighter_blue{
  background-color: #6496cc;
}

.background_padding_top{
  padding-bottom:120px;
}

.background_padding{
  padding:120px 0px
}

/* Action */
#action{
  background-color: #315e92;
  padding-bottom:100px;
}


/* Partners */
#partners{
  background-color: #315e92;
  padding-bottom:100px;
}

.partner a{
  color:white;
  text-decoration: none;
}

.partner a:hover{
  color:inherit;

}


/* Media Queries */

@media (max-width: 991px) {

  .bio_pic{
    height:460px;
  }

  .about_staff_descrip p{
    font-size:14px !important;
  }

  .about_bio_descrip{
    max-width:100%;
  }


}

@media (max-width: 767px) {

  .highlight_text{
    width:80%;
    left:10%;
  }

  .why_pics{
    height: 680px;
  }

  .resource_block,
  .address_block{
    max-width: 100%;
  }
  .highlight_text{
    top:450px
}

}

@media (max-width: 600px) {

  .dami_logo,
  .dami_logo_home{
    visibility: hidden;
  }

  .bio_pic_img{
    height: 250px;
    display: block;
    width: 100% !important;
  }

  .bio_pic{
    height:900px;
  }

  .highlight {
    height: 700px;
  }

  .overlay{
    height:700px;
  }

}

@media (max-width: 431px) {



}

